# selective-scan-jax

./: .gitignore  CMakeLists.txt  README.md  flake.nix  pyproject.toml
csrc/: kernel_helpers.h  kernels.cc.cu  kernels.h  pybind11_kernel_helpers.h  selective_scan_jax_cuda.cc
csrc/cuda_src/: cuda_common.h  selective_scan_bwd_kernel.cuh  selective_scan_common.h  selective_scan_fwd_kernel.cuh
selective_scan_jax/: __init__.py  selective_scan_jax.py
test/: test_selective_scan_jax.py  utils.py
tests/: test_selective_scan_jax.py
