[project]
name = "selective_scan_jax"
version = "0.1.0"

[build-system]
requires = ["scikit-build-core>=0.10.1", "pybind11>=2.13.1"]
build-backend = "scikit_build_core.build"

optional-dependencies.dev = [
    "pytest>=8.3.2",
    "torch>=2.4.0",
    "absl-py>=2.1.0",
    "einops>=0.8.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
test = "pytest"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
jax = {extras = ["cuda12"], version = "^0.4.31"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
scikit-build-core = "^0.10.1"
pybind11 = "^2.13.1"
torch = "^2.4.0"
absl-py = "^2.1.0"
einops = "^0.8.0"

